[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pyadsbdb"
authors = [
  { name="T.Theekshana" },
]
description = "A Python wrapper for the adsbdb API"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
]
dependencies = ["requests"]
keywords = ["api", "adsb"]

[tool.setuptools.dynamic]
version = { attr = "pyadsbdb.__version__.__version__" }

[project.urls]
Homepage = "https://github.com/ttheek/pyadsbdb"
Issues = "https://github.com/ttheek/pyadsbdb/issues"
Repository = "https://github.com/ttheek/pyadsbdb.git"